
version 0.3
	setup.py long_description documentation
	Added logplot gchart backend chart type support (pie, histogram, line)
	
version 0.2
	Added support for configuration profiles (-P <profile_name>)
	Added logmerge utility and unittest
	Added logplot utility with initial Google Chart API support and unittest (Experimental)
	Added pygooglechart package dependency in setup.py
	
version 0.1
	Added to PyPI Python Package Index
	Initial check-in of project.
	Version 0.1 Tag