@@ -2,6 +2,7 @@
 version 0.3
 	setup.py long_description documentation
 	Added logplot gchart backend chart type support (pie, histogram, line)
+	Changed most methods' programmatic interface to use generators (yield values)
 	
 version 0.2
 	Added support for configuration profiles (-P <profile_name>)
